--- a/Docs/Slides/part1.tex
+++ b/Docs/Slides/part1.tex
@@ -26,9 +26,9 @@
   \begin{itemize}
    \item inserire convenzioni
    \item inserire rate per una convenzione
-   \item visualizzare le convenzioni inserite
+   \item visualizzare e cercare le convenzioni inserite
    \item aggiornare i dati di una convenzione
-   \item notificare le scadenze
+   \item notificare scadenze ed eventi relativi alle convenzioni
   \end{itemize}
 
 \end{frame}
@@ -53,12 +53,12 @@
      \vskip2ex
      \item Il Tempo:\\
       \begin{itemize}
-       \item notifica le scadenze
+       \item notifica scadenze ed eventi
       \end{itemize}
       \vskip2ex
       \item Amministratore
 	\begin{itemize}
-	 \item Gestisce gli utenti e i loro ruoli
+	 \item gestisce gli utenti e i loro ruoli
 	\end{itemize}
 
      \end{itemize}
@@ -96,7 +96,7 @@
       \hline
       Preconditions & L'Operatore deve aver effettuato il login \\
 	\hline
-      Basic Course & {\tiny
+      Basic course & {\tiny
 	\begin{minipage}{0.7\textwidth}
 	  \vskip1ex
 	  \begin{enumerate}
@@ -155,7 +155,7 @@
       \hline
       Preconditions & L'Operatore deve aver effettuato il login \\
 	\hline
-      Basic Course & {\tiny
+      Basic course & {\tiny
 	\begin{minipage}{0.7\textwidth}
 	  \vskip1ex
 	  \begin{enumerate}
