--- a/Docs/Slides/part2.tex
+++ b/Docs/Slides/part2.tex
@@ -342,7 +342,7 @@ public class Persona {
 	
 	\vspace{0.8em}
 	
-	\item fornisce una specifica per la definizione di Managed bean
+	\item include una specifica per la definizione di Managed bean
 		\begin{itemize}
 		
 		\vspace{0.5em}
@@ -600,6 +600,7 @@ public class Persona {
 
 
 \begin{frame}{Comunicazione client-server}
+
 \begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{custom_JSF_lifecycle.eps}
