--- a/Docs/Slides/Slides.tex
+++ b/Docs/Slides/Slides.tex
@@ -99,7 +99,7 @@
       \begin{minipage}[t]{20ex}
 	\raggedright
 	\emph{Candidati:}\\
-	Tommaso Levato\\ Alessio Sarullo\\ Giulio Galvan
+	Giulio Galvan\\Alessio Sarullo\\Tommaso Levato
       \end{minipage}
 \end{flushright}
 \end{column}
