annotazioni in grigio

--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -9,8 +9,8 @@
 \item \textsl{Annotation-based}
 
 \begin{lstlisting}[basicstyle={\tiny\ttfamily}]
-@Secures
-@AlterCompaniesAllowed
+&&@Secures&&
+&&@AlterCompaniesAllowed&&
 public boolean canUserAlterCompanies() {...}
 \end{lstlisting}
 
