--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -174,7 +174,7 @@ dei casi d'uso
 \footnotesize
 \begin{tabular}{| c | p{4.5cm} | p{4cm} |} 
     \hline
-     & Descrizione & Casi d'uso esercitati \\
+     & Descrizione & Casi di test esercitati \\
     \hline
     1 & Inserimento convenzione,\newline
     aggiunta ditta,
