--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -125,7 +125,7 @@ ed i loro permessi
 \begin{frame}{Ruoli e Permessi}
 \begin{itemize}
 	
-\item Operatore
+\item Operatore Amministrativo
 	\begin{itemize}
 	\item Gestisce le convenzioni del proprio dipartimento
 	\end{itemize}
