--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -131,7 +131,7 @@ ed i loro permessi
 	\end{itemize}
 
 \vspace{0.8em}
-\item Professore
+\item Docente
 	\begin{itemize}
 	\item Visualizza le proprie convenzioni
 	\item Allega documenti alle proprio convenzioni
