--- a/Docs/Slides/part1.tex
+++ b/Docs/Slides/part1.tex
@@ -88,7 +88,7 @@
 \tiny
     \begin{tabular}{| l | l|}
       \hline
-       \textbf{UC \#D1} & \textbf{Inserisci convenzione} \\
+       \textbf{UC \#OA1} & \textbf{Inserisci convenzione} \\
       \hline
       Level & User goal \\
       \hline
@@ -147,7 +147,7 @@
     \tiny
     \begin{tabular}{| l | l|}
       \hline
-       \textbf{UC \#D1} & \textbf{Inserisci convenzione} \\
+       \textbf{UC \#OA1} & \textbf{Inserisci convenzione} \\
       \hline
       Level & User goal \\
       \hline
