--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -164,7 +164,7 @@ dei casi d'uso
 
 \end{frame}
 
-\begin{frame}{Scenari e Casi d'uso}
+\begin{frame}{Scenari e Casi di test}
 
 \begin{itemize}
 \item Copertura dei casi d'uso
@@ -250,10 +250,10 @@ dei casi d'uso
 \item Gestione delle convenzioni e dei contributi
 \vspace{0.8em}
 	\begin{itemize}
-	\item inserire convenzioni/contributi
-	\item inserire rate per una convenzione/contributo
-	\item visualizzare convenzioni/contributi inseriti
-	\item aggiornare i dati di una convenzione/contributo
+	\item inserire convenzioni
+	\item inserire rate per una convenzione
+	\item visualizzare convenzioni inserite
+	\item aggiornare i dati di una convenzione
 	\item notificare le scadenze
 	\end{itemize}
 \end{itemize}
