--- a/Docs/Slides/part1.tex
+++ b/Docs/Slides/part1.tex
@@ -9,6 +9,7 @@
       \end{flushleft}
       \end{column}
      \begin{column}{0.55\textwidth}
+     \vskip-3em
       \begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.2]{images/convenzione_activity_diag.eps}
