--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -40,7 +40,7 @@ public boolean canUserAlterCompanies() {...}
 	\begin{itemize}
 	\item Gerarchia interfacce/classi -\textgreater  cartelle/pagine
 	\vspace{0.8em}
-	\item Classe \textsl{AccessDecisionVoter}
+	\item Interfaccia \textsl{AccessDecisionVoter}
 	\vspace{0.8em}
 	\item Possibilità di specificare\newline
 	una pagina di errore\newline
