--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -172,29 +172,29 @@ dei casi d'uso
 
 \begin{center}
 \footnotesize
-\begin{tabular}{| c | p{4.5cm} | p{4cm} |} 
+\begin{tabular}{| c| p{4.5cm} | p{4.5cm} |} 
     \hline
      & Descrizione & Casi di test esercitati \\
     \hline
     1 & Inserimento convenzione,\newline
     aggiunta ditta,
-    aggiunta rata & UC OA.1 base,
-    UC OA.10 alt3,\newline
-    UC OA.6 base\\
+    aggiunta rata & UC \#OA1 base,
+    UC \#OA10 alt3,\newline
+    UC \#OA6 base\\
     \hline
-    2 & Modifica rata contributo & UC OA.2 base,
-    UC OA.3 base, \newline
-    UC OA.7 base  \\
+    2 & Modifica rata contributo & UC \#OA2 base,
+    UC \#OA3 base, \newline
+    UC \#OA7 base  \\
     \hline
-    3 & Modifica dati ditta & UC OA.13 base,\newline
-    UC OA.11 base \\
+    3 & Modifica dati ditta & UC \#OA13 base,
+    UC \#OA11 base \\
     \hline
-    4 & Inserimento contributo con allegati & UC OA.1 base\\
+    4 & Inserimento contributo con allegati & UC \#OA1 base\\
     \hline
-    5 & Inserimento allegato convenzione & UC D.1 base,
-    UC D.3 base\\
+    5 & Inserimento allegato convenzione & UC \#D1 base,
+    UC \#D3 base\\
     \hline
-    6 & Aggiunta utente & UC A.1 base\\
+    6 & Aggiunta utente & UC \#A1 base\\
     \hline
   \end{tabular} 
 \end{center}
