--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -167,7 +167,7 @@ dei casi d'uso
 \begin{frame}{Scenari e Casi di test}
 
 \begin{itemize}
-\item Copertura dei casi d'uso
+\item Copertura dei casi di test
 \end{itemize}
 
 \begin{center}
@@ -208,7 +208,7 @@ dei casi d'uso
 \footnotesize
 \begin{tabular}{|c|p{2.5cm}|p{3cm}|p{1.5cm}|c|}
     \hline
-    Passo & Descrizione sequenza operazioni & Risultato
+    Passo & Descrizione\newline sequenza operazioni & Risultato
      atteso & Risultato\newline ottenuto & Ok\\
     \hline
     1 & L'Amministratore clicca sul pulsante\newline ``Aggiungi utente'' & Viene visualizzata una schermata contenente\newline i campi da inserire& Uguale 
