--- a/Docs/Slides/part3.tex
+++ b/Docs/Slides/part3.tex
@@ -240,7 +240,7 @@ dei casi d'uso
 \begin{itemize}
 \item gestione dei contratti
 \vspace{0.4em}
-\item autorizzazioni ad incarichi retribuiti
+\item gestione autorizzazioni ad incarichi retribuiti
 \end{itemize}
 \end{itemize}
 
