--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -105,6 +105,7 @@ shareTableRentals=Noleggi
 shareTableContrPersonnel=Personale a contratto
 shareTableOtherCosts=Altri costi
 shareTableInvolvedPersonnel=Personale coinvolto
+shareTablePersonnelId=Id
 
 shareTableGoodsValues=Quote di "Beni e servizi"
 
@@ -216,5 +217,6 @@ VatNumber=Partita IVA
 companyName=Denominazione
 
 table_share=Quota(tabella)
+table_id=Id(tabella)
 
 err_illegalVatNumber=La partita IVA deve consistere di sole cifre
