--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -134,6 +134,7 @@ noInstallmentFound=Nessuna rata inserita
 noAttachmentFound=Nessun allegato inserito
 noUserFound=Nessun utente trovato
 noCompanyFound=Nessuna ditta trovata
+noRoleFound=L'utente non ricopre alcun ruolo
 
 err_duplicateSerial=Matricola già esistente
 
@@ -174,6 +175,8 @@ err_duplicateSocialNumber= Codice fiscale già esistente
 err_badImport=Impossibile trovare un utente con la data matricola
 
 err_db=Si è verificato un errore all'interno del database
+
+err_illegalVatNumber=La partita IVA deve consistere di sole cifre
 
 info_badLogin=Matricola o password errati
 info_badLogin_detail=Matricola o password errati: inserire i valori corretti
@@ -219,4 +222,4 @@ companyName=Denominazione
 table_share=Quota(tabella)
 table_id=Id(tabella)
 
-err_illegalVatNumber=La partita IVA deve consistere di sole cifre
+userRoles=Ruoli
