--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -223,3 +223,7 @@ table_share=Quota(tabella)
 table_id=Id(tabella)
 
 userRoles=Ruoli
+
+operator=Operatore Amministrativo
+professor=Docente
+administrator=Amministratore
