--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -171,6 +171,7 @@ err_generic=E' avvenuto un errore
 err_sendingMail=E' avvenuto un errore durante l'invio dell' email di notifica
 
 err_duplicateSocialNumber= Codice fiscale già esistente
+err_socialOrVatRequired=Inserire almeno uno tra codice fiscale e partita IVA
 
 err_badImport=Impossibile trovare un utente con la data matricola
 
