settore disciplinare + durata in mesi

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -72,6 +72,7 @@ agrTitle=Titolo
 contactPerson=Referente
 company=Ditta
 chief=Responsabile scientifico
+teachingSector=Settore disciplinare
 protocolNumber=Numero protocollo
 notes=Note
 iva=IVA
@@ -90,6 +91,7 @@ taxableAmount=Totale imponibile
 approvalDate=Data di approvazione
 beginDate=Data di inizio
 deadlineDate=Data di scadenza
+timeInMonths=Durata in mesi
 agrInventory=Repertorio
 share=Quota
 
