--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -221,6 +221,7 @@ legalResidence=Sede legale
 socialNumber=Codice fiscale
 VatNumber=Partita IVA
 companyName=Denominazione
+companyType=Tipologia
 
 table_share=Quota(tabella)
 table_id=Id(tabella)
